# teste-admissao-boreal

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: dev_server.py  main.py
src/auth/: auth_router.py  auth_service.py  token_model.py  user_model.py
src/breweries/: brewerie_models.py  brewerie_router.py  order_model.py
src/exceptions/: auth_handlers.py  exceptions.py  invalid_username_or_password.py  user_already_exists.py  user_dont_exist.py
src/routers/auth/: auth.py  user_model.py
src/settings/: settings.py
src/user_repository/: sql_user_repository.py  user_repository_interface.py
src/users/: user_repository_interface.py
src/users/repositories/: sql_user_repository.py
src/utils/: crypto.py
tests/: behavior_test.py  conftest.py
tests/fakes/: fake_settings.py  fake_user_repository.py
tests/plugins/: mock_app_client.py  mock_openbrewery_response.py
